--- a/pg01.html
+++ b/pg01.html
@@ -5,17 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-        h1 {
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/linguas.css">
 </head>
 <body>
-    <h1>Em desenvolvimento!</h1>
+    <header>
+        <div class="header2">
+            <nav>
+                <div class="logo">
+                    <img src="" alt="">
+                </div>
+                <div class="menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+                <ul class="nav-list">
+                    <li>Home</li>
+                    <li>Lições
+                        <ul class="dropdown">
+                            <li><a href="#">IPA</a></li>
+                            <li><a href="#">Collocation</a></li>
+                            <li><a href="#">Phrase Verbs</a></li>
+                            <li><a href="#">Modal Verbs</a></li>
+                            <li><a href="#">Mais +</a></li>
+                        </ul>
+                    </li>
+                    <li>Dicas
+                        <ul class="dropdown">
+                            <li><a href="#">listening</a></li>
+                            <li><a href="#">Speaking<a></li>
+                            <li><a href="#">English Fluency</a></li>
+                        </ul>
+                    </li>
+                    <li>Siga-nos
+                        <ul class="dropdown">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram<a></li>
+                            <li><a href="#">YouTube</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
